--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://AntoninaHoncharenko.github.io/gallery-js",
+  "homepage": "https://AntoninaHoncharenko.github.io/gallery-js-infinite-scroll",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /gallery-js/"
+    "build": "parcel build src/*.html --public-url /gallery-js-infinite-scroll/"
   },
   "repository": {
     "type": "git",
